--- a/fazzi/index.html
+++ b/fazzi/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>~/startpage 🏠</title>
-  <link rel="stylesheet" type="text/css" href="../src/style.css">
+  <link rel="stylesheet" type="text/css" href="src/style.css">
   <link rel="stylesheet" type="text/css" href="colors.css">
   <link rel="icon"
     href="https://code.toofishes.net/cgit/dan/archweb.git/plain/public/static/logos/archlinux-logo-only.svg">
@@ -21,10 +21,8 @@
       <li><a href="https://google.com/">Goolge</a></li>
       <li><a href="https://youtube.com">YouTube</a></li>
       <li><a href="https://monkeytype.com/">MonkeyType</a></li>
-      <li><a href="https://codingladders.com/ladder2">Ladder Medium</a></li>
-      <li><a href="https://codingladders.com/ladder1">Ladder easy</a></li>
-      <li><a href="https://codingladders.com/ladder3">Ladder hard</a></li>
-      <li><a href="https://www.youtube.com/watch?v=ZUFQfFaU-8U&list=PLgUwDviBIf0oE3gA41TKO2H5bHpPd7fzn&index=27&ab_channel=takeUforward">Graph</a></li>
+      <li><a href="https://codingladders.com/ladder2">Ladder</a></li>
+<!--       <li><a href="https://codingladders.com/ladder3">Ladder hard</a></li> -->
       <li><a href="https://calendar.proton.me/u/2/">Calendar</a></li>
     </url-list>
     <url-list>
@@ -32,11 +30,14 @@
       <li><a href="https://codeforces.com/profile/madaradesu">Codeforces</a></li>
       <li><a href="https://vjudge.net/group/phase-2">VJudge</a></li>
       <li><a href="https://progvar.fun/problemsets">progvar</a></li>
-      <li><a href="https://www.oreilly.com/library/view/java-8-fundamentals/9780133489354/?_gl=1*187lady*_ga*MTMwOTA4NjU3NS4xNjgyOTAzNzgz*_ga_092EL089CH*MTY4MjkwMzc4Mi4xLjEuMTY4MjkwMzc5OS40My4wLjA.">GUI L12 13 19 20 21</a></li>
+            <li><a href="https://www.youtube.com/watch?v=ZUFQfFaU-8U&list=PLgUwDviBIf0oE3gA41TKO2H5bHpPd7fzn&index=27&ab_channel=takeUforward">Graph TUF</a></li>
+
       <!-- https://www.youtube.com/@Kofybrek/videos -->
       <!-- https://www.oreilly.com/library/view/java-8-fundamentals/9780133489354/?_gl=1*49vegg*_ga*MTMwOTA4NjU3NS4xNjgyOTAzNzgz*_ga_092EL089CH*MTY4MjkwMzc4Mi4xLjEuMTY4MjkwMzgzNS43LjAuMA.. -->
       <li><a href="https://www.youtube.com/@Kofybrek/videos">SFML</a></li>
-
+      <li><a href="https://www.youtube.com/watch?v=yRM3sc57q0c&list=PLXFMmlk03Dt7Q0xr1PIAriY5623cKiH7V&index=1
+">Algorithms Stanford</a></li>
+<!-- https://www.youtube.com/watch?v=yRM3sc57q0c&list=PLXFMmlk03Dt7Q0xr1PIAriY5623cKiH7V&index=1 -->
       <li><a href="https://www.youtube.com/watch?v=xKNPTYtTnAo&list=PLVEo1P9gAninM7KwP1KKolfMQdNs6P6Am">Networking YT</a></li>
       <li><a href="https://media.pearsoncmg.com/ph/streaming/esm/tanenbaum5e_videonotes/tanenbaum_videoNotes.html">Networking</a></li>
       <li><a href="https://pages.cs.wisc.edu/~remzi/Classes/537/Fall2021/">OS Remzi</a></li>
@@ -52,8 +53,9 @@
       <li><a href="https://drive.google.com/drive/u/0/my-drive">GDrive</a></li>
     </url-list>
     <url-list>
-      <li>~/reddit </li>
-    
+      <li>~/College </li>
+          <li><a href="https://www.oreilly.com/library/view/java-8-fundamentals/9780133489354/?_gl=1*187lady*_ga*MTMwOTA4NjU3NS4xNjgyOTAzNzgz*_ga_092EL089CH*MTY4MjkwMzc4Mi4xLjEuMTY4MjkwMzc5OS40My4wLjA.">GUI L12 13 19 20 21</a></li>
+          <li><a href="https://www.youtube.com/watch?v=vPevc8XaImk&list=PLAZ__zcDB1IaNaVNOckNpgEpjghSHr8Gg&index=1">Linux Course</a></li>
     </url-list>
   </link-grid>
   <script type="text/javascript" src="./localStorageHelper.js"></script>
