--- a/fazzi/index.html
+++ b/fazzi/index.html
@@ -17,24 +17,13 @@
     <greeting>Welcome back!</greeting>
     <date id="date"></date>
     <url-list>
-      <li>~/general </li>
-      <li><a href="https://google.com/">Goolge</a></li>
-      <li><a href="https://youtube.com">YouTube</a></li>
-      <li><a href="https://monkeytype.com/">MonkeyType</a></li>
-      <li><a href="https://codingladders.com/ladder2">Ladder</a></li>
-<!--       <li><a href="https://codingladders.com/ladder3">Ladder hard</a></li> -->
-      <li><a href="https://calendar.proton.me/u/2/">Calendar</a></li>
-    </url-list>
+     
     <url-list>
-      <li>~/dev </li>
-      <li><a href="https://codeforces.com/profile/madaradesu">Codeforces</a></li>
-      <li><a href="https://vjudge.net/group/phase-2">VJudge</a></li>
-      <li><a href="https://progvar.fun/problemsets">progvar</a></li>
+      <li>~/Self Learning </li>
+     
+      <li><a href="      https://www.youtube.com/playlist?list=PLUl4u3cNGP63EdVPNLG3ToM6LaEUuStEY
+">MIT Algo</a></li>
             <li><a href="https://www.youtube.com/watch?v=ZUFQfFaU-8U&list=PLgUwDviBIf0oE3gA41TKO2H5bHpPd7fzn&index=27&ab_channel=takeUforward">Graph TUF</a></li>
-
-      <!-- https://www.youtube.com/@Kofybrek/videos -->
-      <!-- https://www.oreilly.com/library/view/java-8-fundamentals/9780133489354/?_gl=1*49vegg*_ga*MTMwOTA4NjU3NS4xNjgyOTAzNzgz*_ga_092EL089CH*MTY4MjkwMzc4Mi4xLjEuMTY4MjkwMzgzNS43LjAuMA.. -->
-      <li><a href="https://www.youtube.com/@Kofybrek/videos">SFML</a></li>
       <li><a href="https://www.youtube.com/watch?v=yRM3sc57q0c&list=PLXFMmlk03Dt7Q0xr1PIAriY5623cKiH7V&index=1
 ">Algorithms Stanford</a></li>
 <!-- https://www.youtube.com/watch?v=yRM3sc57q0c&list=PLXFMmlk03Dt7Q0xr1PIAriY5623cKiH7V&index=1 -->
@@ -45,12 +34,30 @@
       <!-- <li><a href="https://forum.xda-developers.com/c/oneplus-8t.11579/">XDA 8T</a></li>
       <li><a href="https://modrinth.com/">Modrinth</a></li> -->
     </url-list>
-    <url-list>
-      <li>~/school 拾</li>
-      <li><a href="https://calendar.google.com">Calendar</a></li>
+       <li>~/general </li>
+      <li><a href="https://google.com/">Goolge</a></li>
+      <li><a href="https://youtube.com">YouTube</a></li>
+      <li><a href="https://monkeytype.com/">MonkeyType</a></li>
+      <li><a href="https://codingladders.com/ladder2">Ladder</a></li>
+            <li><a href="https://calendar.google.com">Calendar</a></li>
       <li><a href="https://github.com/">GitHub</a></li>
       <li><a href="https://mail.google.com">Gmail</a></li>
       <li><a href="https://drive.google.com/drive/u/0/my-drive">GDrive</a></li>
+<!--       <li><a href="https://codingladders.com/ladder3">Ladder hard</a></li> -->
+      <li><a href="https://calendar.proton.me/u/2/">Calendar</a></li>
+    </url-list>
+    <url-list>
+      <li>~/PS 拾</li>
+       <li><a href="https://codeforces.com/profile/madaradesu">Codeforces</a></li>
+      <li><a href="https://vjudge.net/group/phase-2">VJudge</a></li>
+      <li><a href="https://progvar.fun/problemsets">progvar</a></li>
+            <li><a href="https://www.youtube.com/@Kofybrek/videos">SFML</a></li>
+                  <li><a href="      https://leetcode.com/problemset/all/
+">Daily LeetCode</a></li>
+
+      https://leetcode.com/problemset/all/
+
+
     </url-list>
     <url-list>
       <li>~/College </li>
