--- a/index.html
+++ b/index.html
@@ -39,22 +39,19 @@
       <li><a href="https://google.com/">Goolge</a></li>
       <li><a href="https://youtube.com">YouTube</a></li>
       <li><a href="https://monkeytype.com/">MonkeyType</a></li>
-      <li><a href="https://codingladders.com/ladder2">Ladder</a></li>
             <li><a href="https://calendar.google.com">Calendar</a></li>
       <li><a href="https://github.com/">GitHub</a></li>
       <li><a href="https://mail.google.com">Gmail</a></li>
       <li><a href="https://drive.google.com/drive/u/0/my-drive">GDrive</a></li>
 <!--       <li><a href="https://codingladders.com/ladder3">Ladder hard</a></li> -->
-      <li><a href="https://calendar.proton.me/u/2/">Calendar</a></li>
     </url-list>
     <url-list>
       <li>~/PS 拾</li>
-       <li><a href="https://codeforces.com/profile/madaradesu">Codeforces</a></li>
+              <li><a href="https://a2oj.herokuapp.com/?handle=Madaradesu&rating=0&div=1">A2OJ Ladder div 2A 50</a></li>
       <li><a href="https://vjudge.net/group/phase-2">VJudge</a></li>
+        <li><a href="https://leetcode.com/problemset/all/">Daily LeetCode</a></li>
+       <li><a href="https://codeforces.com/profile/madaradesu">Codeforces</a></li>
       <li><a href="https://progvar.fun/problemsets">progvar</a></li>
-            <li><a href="https://www.youtube.com/@Kofybrek/videos">SFML</a></li>
-                  <li><a href="      https://leetcode.com/problemset/all/
-">Daily LeetCode</a></li>
 
 <!--       https://leetcode.com/problemset/all/ -->
 
@@ -64,6 +61,8 @@
       <li>~/College </li>
           <li><a href="https://www.oreilly.com/library/view/java-8-fundamentals/9780133489354/?_gl=1*187lady*_ga*MTMwOTA4NjU3NS4xNjgyOTAzNzgz*_ga_092EL089CH*MTY4MjkwMzc4Mi4xLjEuMTY4MjkwMzc5OS40My4wLjA.">GUI L12 13 19 20 21</a></li>
           <li><a href="https://www.youtube.com/watch?v=vPevc8XaImk&list=PLAZ__zcDB1IaNaVNOckNpgEpjghSHr8Gg&index=1">Linux Course</a></li>
+                  <li><a href="https://www.youtube.com/@Kofybrek/videos">SFML</a></li>
+
     </url-list>
   </link-grid>
   <script type="text/javascript" src="./localStorageHelper.js"></script>
