--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <url-list>
       <li>~/College </li>
           <li><a href="https://www.oreilly.com/library/view/java-8-fundamentals/9780133489354/?_gl=1*187lady*_ga*MTMwOTA4NjU3NS4xNjgyOTAzNzgz*_ga_092EL089CH*MTY4MjkwMzc4Mi4xLjEuMTY4MjkwMzc5OS40My4wLjA.">GUI L12 13 19 20 21</a></li>
-          <li><a href="https://www.youtube.com/watch?v=vPevc8XaImk&list=PLAZ__zcDB1IaNaVNOckNpgEpjghSHr8Gg&index=1">Linux Course</a></li>
+          <li><a href="https://www.youtube.com/watch?v=Fljem-cZxB8&list=PLAZ__zcDB1IaNaVNOckNpgEpjghSHr8Gg&index=4">Linux Course</a></li>
                   <li><a href="https://www.youtube.com/@Kofybrek/videos">SFML</a></li>
 
     </url-list>
