--- a/fazzi/index.html
+++ b/fazzi/index.html
@@ -29,6 +29,7 @@
       <li><a href="https://www.youtube.com/watch?v=xKNPTYtTnAo&list=PLVEo1P9gAninM7KwP1KKolfMQdNs6P6Am">Networking YT</a></li>
       <li><a href="https://media.pearsoncmg.com/ph/streaming/esm/tanenbaum5e_videonotes/tanenbaum_videoNotes.html">Networking</a></li>
       <li><a href="https://pages.cs.wisc.edu/~remzi/Classes/537/Fall2021/">OS Remzi</a></li>
+      <li><a href="https://github.com/raysan5/raylib-games/blob/master/classics/src/snake.c">Snake Ping Tetris  Raylib/a></li>
 
       <!-- <li><a href="https://forum.xda-developers.com/c/oneplus-8t.11579/">XDA 8T</a></li>
       <li><a href="https://modrinth.com/">Modrinth</a></li> -->
