--- a/fazzi/index.html
+++ b/fazzi/index.html
@@ -19,7 +19,7 @@
     <url-list>
      
       <li>~/Self Learning </li>
-     
+              <li><a href="  https://lms.zad-academy.com/course/index.php?categoryid=2">Zad Academy</a></li>
       <li><a href="     https://www.youtube.com/playlist?list=PLn4uMlgWfLS6buYBoLrGwqii0jk5qbbtb
 ">MIT Algo</a></li>
             <li><a href="https://www.youtube.com/watch?v=ZUFQfFaU-8U&list=PLgUwDviBIf0oE3gA41TKO2H5bHpPd7fzn&index=27&ab_channel=takeUforward">Graph TUF</a></li>
@@ -48,7 +48,6 @@
     </url-list>
     <url-list>
       <li>~/PS 拾</li>
-              <li><a href="https://a2oj.herokuapp.com/?handle=Madaradesu&rating=0&div=1">A2OJ Ladder div 2A 50</a></li>
       <li><a href="https://vjudge.net/group/phase-2">VJudge</a></li>
         <li><a href="https://leetcode.com/problemset/all/">Daily LeetCode</a></li>
        <li><a href="https://codeforces.com/profile/madaradesu">Codeforces</a></li>
